// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Author: Evan Spendlove, GitHub: @evanSpendlove.
//
// state_journal defines the structure that stores the state of Hermes.

syntax = "proto3";

package hermes.proto;

option go_package = "github.com/googleinterns/step224-2020/hermes/proto";

// StateJournal stores the state of Hermes in two parts: 
// the next operation intent and a map of filenames.
message StateJournal {
  // The intent stores the operation to be performed and the name of the file on
  // which the operation is to be performed.
  Intent intent = 1;

  // The filenames map is a map of file IDs to filenames.
  // If an entry does not exist for a given ID, then the file does not exist.
  map<int32, string> filenames = 2;
}

// Intent stores the next intended file operation of Hermes.
message Intent {
  // FileOperation is used for recording the operation intent within the 
  // StateJournal of Hermes.
  enum FileOperation {
    FILE_OPERATION_UNSPECIFIED = 0; 
    CREATE = 1;
    DELETE = 2;
  }

  FileOperation fileOperation = 1;
  string filename = 2;
}
